--- a/project1.css
+++ b/project1.css
@@ -1,91 +1,236 @@
 body{
     margin: 0;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    background-image: linear-gradient(to left,#002147,#4169E1);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
 }
-
-.logo{
-    background-image: linear-gradient(#002366,#005b7f);
-    background-size: 100%;
+.header{
     display: flex;
-    justify-content: center;
-}
-.tabs{
-    background-color: #03445e;
-    padding: 10px;
-    word-spacing: 5px;
-}
-
-a:visited 
-{
-    color:#CCCCCC;
-} 
-h1{
-    text-align: left;
-    background-color:#005b7f;
-    padding: 20px;
-    margin: 0;
-    font-family: 'Titillium Web', sans-serif;
-}
-.container {
-    display: flex;
-    background-color: #005b7f;
-    padding: 20px;
-}
-
-.image-wrapper {
-    text-align: center;
-    padding: 20px;
-    flex: 1;
-    color: white; /* Text color */
-}
-
-.image-wrapper img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-.image-wrapper p {
-    margin-top: 10px;
-}
-
-footer {
-    background-color: #005b7f;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
-footer {
-    background-color: #003450; /* Darker shade of blue */
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
-
-.footer-content {
-    display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    background-color: #002B6B;
+    border-bottom: 1px solid white;
+    height: 150px;
+}
+.logo{
+    text-align: left;
+    display: block;
+    width: 100%;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+.login{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    float: right;
+    margin-right: 30px;
+    margin-top: 20px;
 }
 
-.footer-item {
-    padding: 10px;
-}
-
-.footer-item h2 {
-    margin: 0;
-}
-
-.footer-item p {
-    margin: 5px 0;
-}
-
-.footer-item a {
+#email{
+    padding: 10px 20px 10px 20px;
+    background-color: transparent;
+    border: 2px solid white;
     color: white;
+    margin-right: 10px;
+
+}
+#email::placeholder{
+    color: white;
+    font-size: 15px;
+}
+#password{
+    padding: 10px 20px 10px 20px;
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    margin-right: 10px;
+}
+#password::placeholder{
+    color: white;
+    font-size: 15px;
+}
+.login button{
+    padding: 10px 30px 10px 30px;
+    background-color: #002147;
+    border: 2px solid black;
+    color: white;
+ 
+}
+#login button::placeholder{
+    color: black;
+    font-size: 15px;
+}
+.navigationbar{
+    display: flex;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    margin-right: 50px;
+    margin-top: 30px;
+}
+.navigationbar a{
+    text-transform: uppercase;
+    text-decoration: none;
+    
+}
+.navigationbar a:hover{
+    color: lightgray;
+    border-bottom: 1px solid white;
+}
+.news{
+    margin-right: 70px;
+}
+a:link{
+    color: white;
+}
+a:visited{
+    color: black
+    ;
+}
+
+a:active{
+    color: #ffd1dc;
+}
+button:active{
+    color: #333333;
+}
+button:hover{
+    color: #4a90e2;
+}
+
+
+.sector1 {   
+    
+    display: flex;
+    
+}
+
+.allnews {
+    border: 1px solid grey;
+    margin: 20px;
+    width: 500px;
+    position:relative;
+    top: 200px;
+    left: 200px;
+
+}
+
+.allnews img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.allnews .description {
+    color: white;
+    padding: 10px;
+    font-size: 30px;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.allnews:hover {
+    opacity: calc(80%);
+    background-color: #002147;
+    transition: 0,5s;
+    border: 1px solid black;
+}
+
+.sector2{
+    display: flex;
+}
+.forthnews {
+    display: flex;
+    border: 1px solid grey;
+    margin: 20px;
+    width: 1500px;
+    position:relative;
+    top: 500px;
+    left: 200px;
+}
+.forthnews img {
+    width: 1000px;
+    height: 600px;
+   
+}
+.forthnews  .bigdescription{
+    color: white;
+    padding: 10px;
+    padding-top: 5px;
+    font-size: 40px;
+    font-weight: bolder;
+    text-align: right;
+
+}
+.forthnews .littledescription{
+        color: white;
+        padding: 10px;
+        padding-top: 50px;
+        font-size: 20px;
+        font-weight: 1300;
+        text-align: right;
+    
+    
+}
+.forthnews:hover {
+    opacity: calc(80%);
+    background-color: #002147;
+    transition: 0,5s;
+    border: 1px solid black;
+}
+.forthnews .seemore{
+    border: 3px solid white;
+    text-align: center;
+    font-size: 25px;
+    padding: 5px;
+}
+.seemore a{
+    text-transform: uppercase;
     text-decoration: none;
 }
 
-.footer-item a:hover {
-    text-decoration: underline;
+.sector2{
+    display: flex;
 }
+.fifthnews {
+    display: flex;
+    border: 1px solid grey;
+    margin: 20px;
+    width: 1500px;
+    position:relative;
+    top: 500px;
+    left: 200px;
+}
+.fifthnews img {
+    width: 1000px;
+    height: 600px;
+   
+}
+.fifthnews  .bigdescription{
+    color: white;
+    padding: 10px;
+    padding-top: 5px;
+    font-size: 40px;
+    font-weight: bolder;
+    text-align: right;
 
+}
+.fifthnews .littledescription{
+    color: white;
+    padding: 10px;
+    padding-top: 50px;
+    font-size: 20px;
+    font-weight: 1300;
+    text-align: right;
+
+
+}
+.fifthnews:hover {
+opacity: calc(80%);
+background-color: #002147;
+transition: 0,5s;
+border: 1px solid black;
+}
