--- a/project1strana2.css
+++ b/project1strana2.css
@@ -1,93 +1,116 @@
 body{
-    margin: 0;/* da ne bi header se odvajao od body*/
-    padding: 0;/* isto kao margin*/
-    background-image: linear-gradient(to right,#002147,#4169E1);/* background color*/
-    background-repeat: no-repeat;/* da se ne pojavljaju dvije kombinacije nego samo jednom*/
-    background-attachment: fixed;/*da li je background ostaje na istom mjestu ne bitno dal skrolujemo */
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(to right,#002147,#4169E1);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     
 }
 .header{
-    display: flex;/* koristimo da moze linija justify da radi*/
-    justify-content: space-between;/* da evenly izmedu slika ili texta postavlja*/
-    align-items: center;/*da text bude centriran */
-    background-color: #002B6B;/*boja */
-    border-bottom: 1px solid white;/*tabla ili border koji koristimo za header */
-    height: 150px;/*velicina headera */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #002B6B;
+    border-bottom: 1px solid white;
+    height: 150px;
 }
-.gaming{
-    color: white;/* boja*/
-    display: flex;/*ne znam */
-    font-family: 'Courier New', Courier, monospace;/*tip fonta za text */
-    font-size: 50px;/*velicina fonta */
-    margin-right: 50px;/*kolko je udaljen od desne strane */
-    margin-top: 30px;/*od gornje */
+.logo{
+    text-align: left;
+    display: block;
+    width: 100%;
+    margin-top: 10px;
 }
-.gaming a{   
-     text-decoration: none;/*da nema liniju ispod */
-}
-.gaming:hover{
-    color: lightgray;/*boja */
-    border-bottom: 1px solid white;/*border za hover */
-}
-.logo1{
-    text-align: left;/*da centrira je lijevo */
-    display: block;/*da se ne mrda */
-    width: 100%;/*sirina */
-    margin-top: 30px;/*odmakne sa gornje strane */
-    margin-left: 30px;/*sa lijeve strane */
+.navbar{
+    float: right;
+    display: flex;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+
 }
 
+.navbar a{
+    text-transform: uppercase;
+    text-decoration: none;
+    
+}
+.navbar a:hover{
+    color: lightgray;
+    border-bottom: 1px solid white;
+}
+.news{
+    margin-right: 70px;
+}
 a:link{
-    color: white;/*boja */
+    color: white;
 }
 a:visited{
-    color: black/*boja */
+    color: black
     ;
 }
 
 a:active{
-    color: #ffd1dc;/*boja  */
+    color: #ffd1dc;
 }
-.section1{
-    justify-content: center; /* Center content horizontally */
-    align-items: center; /* Center content vertically */
-    height: 200px; /* Set height for container */
-}
-.naslov{
-    color:lightgray;/*boja */
-    font-size: 60px;/*velicina teksta */
-    text-align: center;/*centrira se tekst */
 
-}
-.autor{
+.bigdescription {
     color: white;
-    margin-left: 150px;
-
+    padding: 10px;
+    font-size: 50px; 
+    font-weight:left;
+    width: 100vh;
+}
+.news1 {
+    margin: 20px;
+    position: relative;
+    top: 50px;
+}
+.info{
+    color: white;
+    padding: 10px;
+    font-size: 30px;
+    display: flex;
+    margin: 20px;
+    justify-content: center;
+    text-align: left;
+    width: 100vh;
 }
 .slika{
-    text-align: center;
-    position: relative;
-    
-}
-.text{
-    color: white;/*boja */
-    font-size: 20px;/*velicina teksta  */
-    margin-left: 150px;/*koliko je odvojen tekst od uglova stranice */
-    text-align: left;/*lijevu stranu stavljamo tekst */
-    white-space: normal;/* kolko moze teksta bit dok ne ode u drugu liniju*/
-}
-.icon{
-    color: white;
-    margin-left: 470px;
-}
-.slika2{
     display: flex;
-    align-items: center;
-    margin-left: 200px;
+    justify-content: center;
+    width: 500px;
+    height: 300px;
 }
-.ime{
-    color: white;
+.puna{
+    display: flex;
+    justify-content: center;
+    margin-right: 30px;
     position: relative;
-    text-align: center; /* Center the text */
+    top: 10px;
+}
+.tekst{
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    position: relative;
+    top: 10px;
+}
+.credit{
+    color: white;
+    display: flex;
+    justify-content: left;
+    margin-top: 10px;
+    margin-left: 35px;
     
+}
+.footer {
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+    position: relative;
+    text-align: center;
+    top: 100px;
+    background-color: #002B6B;
+    color: white;
+    font-size: large;
 }
