--- a/project1.css
+++ b/project1.css
@@ -18,16 +18,10 @@ body{
     text-align: left;
     display: block;
     width: 100%;
-    margin-top: 30px;
-    margin-left: 30px;
+    margin-top: 10px;
 }
 .login{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     float: right;
-    margin-right: 30px;
-    margin-top: 20px;
 }
 
 #email{
@@ -48,10 +42,12 @@ body{
     border: 2px solid white;
     color: white;
     margin-right: 10px;
+    margin-top: 5px;
 }
 #password::placeholder{
     color: white;
     font-size: 15px;
+
 }
 .login button{
     padding: 10px 30px 10px 30px;
@@ -64,12 +60,12 @@ body{
     color: black;
     font-size: 15px;
 }
+
 .navigationbar{
     display: flex;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
-    margin-right: 50px;
-    margin-top: 30px;
+    font-size: 15px;
+
 }
 .navigationbar a{
     text-transform: uppercase;
@@ -101,27 +97,22 @@ button:hover{
     color: #4a90e2;
 }
 
-
 .sector1 {   
-    
     display: flex;
-    
 }
 
 .allnews {
     border: 1px solid grey;
-    margin: 20px;
-    width: 500px;
-    position:relative;
-    top: 200px;
-    left: 200px;
+    margin-left: 5px;
+    margin-top: 10px;
+    width: 400px;
+    position: relative;
     transition: all 0.5s;
     transition-timing-function: 0.5s;
-
 }
 
 .allnews img {
-    width: 100%;
+    width: 398px;
     height: 300px;
     object-fit: cover;
 }
@@ -129,132 +120,133 @@ button:hover{
 .allnews .description {
     color: white;
     padding: 10px;
-    font-size: 30px;
+    font-size: 20px; 
+    font-weight: bolder;
     font-weight: bolder;
     text-align: center;
+    white-space: nowrap; /* Prevent text from wrapping */
+    text-overflow: ellipsis; /* Add ellipsis for overflowed text */
+    overflow: hidden; /* Hide overflowed text */
 }
 
 .allnews:hover {
     opacity: calc(80%);
     background-color: #002147;
-    transition: 0,5s;
+    transition: 0.5s;
     border: 1px solid black;
     transform: scale(1.1);
 }
 
-.sector2{
+.sector2 {
     display: flex;
 }
+
 .forthnews {
     display: flex;
     border: 1px solid grey;
     margin: 20px;
-    width: 1500px;
-    position:relative;
+    width: 1200px; /* Adjust width as needed */
+    position: relative;
     top: 500px;
-    left: 200px;
+    left: 15px;
     transition: all 0.5s;
     transition-timing-function: 0.5s;
 }
+
 .forthnews img {
-    width: 1000px;
-    height: 600px;
-   
+    width: 800px; /* Adjust width as needed */
+    height: auto; /* Maintain aspect ratio */
 }
-.forthnews  .bigdescription{
+
+.forthnews .bigdescription {
     color: white;
     padding: 10px;
-    padding-top: 5px;
-    font-size: 40px;
+    font-size: 20px; /* Adjust font size as needed */
     font-weight: bolder;
     text-align: right;
+}
 
+.forthnews .littledescription {
+    color: white;
+    padding: 10px;
+    font-size: 14px; /* Adjust font size as needed */
+    font-weight: bold; /* Adjust font weight as needed */
+    text-align: right;
 }
-.forthnews .littledescription{
-        color: white;
-        padding: 10px;
-        padding-top: 50px;
-        font-size: 20px;
-        font-weight: 1300;
-        text-align: right;
-    
-    
-}
+
 .forthnews:hover {
-    opacity: calc(80%);
+    opacity: 0.8; /* Adjust opacity as needed */
     background-color: #002147;
-    transition: 0,5s;
     border: 1px solid black;
     transform: scale(0.9);
 }
-.forthnews .seemore{
+
+.forthnews .seemore {
     border: 3px solid white;
     text-align: center;
-    font-size: 25px;
+    font-size: 16px; /* Adjust font size as needed */
     padding: 5px;
 }
-.seemore a{
+
+.seemore a {
     text-transform: uppercase;
     text-decoration: none;
 }
-
-.sector3{
+.sector3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .fifthnews {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     border: 1px solid grey;
     margin: 20px;
-    width: 1000px;
-    position:relative;
+    width: 1200px; /* Adjust width as needed */
+    position: relative;
     top: 500px;
-    left: 450px;
+    left: 15px;
     transition: all 0.5s;
     transition-timing-function: 0.5s;
 }
+
 .fifthnews img {
-    width: 1000px;
-    height: 600px;
-    background-size: cover;
-    position: relative;
-    overflow: hidden;
+    width: 100%; /* Adjust width as needed */
+    height: auto; /* Maintain aspect ratio */
 }
-.fifthnews  .bigdescription{
+
+.fifthnews .bigdescription {
     color: white;
     padding: 10px;
-    padding-top: 5px;
-    font-size: 40px;
+    font-size: 20px; /* Adjust font size as needed */
     font-weight: bolder;
     text-align: left;
-
 }
-.fifthnews .littledescription{
+
+.fifthnews .littledescription {
     color: white;
     padding: 10px;
-    padding-top: 50px;
-    font-size: 20px;
-    font-weight: 1300;
+    font-size: 14px; /* Adjust font size as needed */
+    font-weight: bold; /* Adjust font weight as needed */
     text-align: left;
-
-
 }
+
 .fifthnews:hover {
-opacity: calc(80%);
-background-color: #002147;
-transition: 0,5s;
-border: 1px solid black;
-transform: scale(0.9);
+    opacity: 0.8; /* Adjust opacity as needed */
+    background-color: #002147;
+    border: 1px solid black;
+    transform: scale(0.9);
 }
-.footer{
+.footer {
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
     position: relative;
-    top: 500px;
     text-align: center;
+    top: 500px;
     background-color: #002B6B;
     color: white;
     font-size: large;
 }
-
