--- a/project/consultation.css
+++ b/project/consultation.css
@@ -10,7 +10,7 @@ html,body
 .header{
     position: sticky;
     top: 0;
-    z-index: 1000; /* Ensure the header stays on top of other content */
+    z-index: 1000;
     background-color: #0C3C60;
 }
 .logo img{
