--- a/project/projekti.css
+++ b/project/projekti.css
@@ -10,7 +10,7 @@ html,body
 .header{
     position: sticky;
     top: 0;
-    z-index: 1000; /* Ensure the header stays on top of other content */
+    z-index: 1000; 
     background-color: #0C3C60;
 }
 .logo img{
@@ -88,7 +88,7 @@ button:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; /* Add this line */
+    flex-direction: column; 
 }
 
 .image1 img {
@@ -179,15 +179,15 @@ button:hover{
         align-items: center;
     }
     .maps img {
-        max-width: 100%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
-        object-fit: cover; /* Maintain aspect ratio and cover container */
+        max-width: 100%; 
+        height: auto;
+        object-fit: cover; 
     }
     .image1 {
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column; /* Add this line */
+        flex-direction: column;
     }
 
     .image1 img {
@@ -204,8 +204,8 @@ button:hover{
         font-size: 70px;
     }
     .partneri img {
-        max-width: 50%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
+        max-width: 50%; 
+        height: auto; 
     }
     .maps {
         display: flex;
@@ -213,15 +213,15 @@ button:hover{
         align-items: center;
     }
     .maps img {
-        max-width: 100%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
-        object-fit: cover; /* Maintain aspect ratio and cover container */
+        max-width: 100%;
+        height: auto; 
+        object-fit: cover; 
     }
     .image1 {
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column; /* Add this line */
+        flex-direction: column;
     }
 
     .image1 img {
@@ -256,7 +256,7 @@ button:hover{
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column; /* Add this line */
+        flex-direction: column; 
     }
 
     .image1 img {
