--- a/project/tools.css
+++ b/project/tools.css
@@ -11,7 +11,7 @@ html,body
 .header{
     position: sticky;
     top: 0;
-    z-index: 1000; /* Ensure the header stays on top of other content */
+    z-index: 1000;
     background-color: #0C3C60;
 }
 .logo img{
@@ -82,7 +82,7 @@ button:hover{
     font-weight: 400px;
     font-size: 80px;
     color: #0C3B5F;
-    margin-bottom: 20px; /* Add margin below the "About" text */
+    margin-bottom: 20px;
 }
 .description{
     text-align: center;
@@ -164,9 +164,9 @@ button:hover{
         align-items: center;
     }
     .maps img {
-        max-width: 100%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
-        object-fit: cover; /* Maintain aspect ratio and cover container */
+        max-width: 100%; 
+        height: auto; 
+        object-fit: cover; 
     }
 }
 @media screen and (min-width: 310px) and (max-width: 416px) {
@@ -177,8 +177,8 @@ button:hover{
         font-size: 70px;
     }
     .partneri img {
-        max-width: 50%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
+        max-width: 50%; 
+        height: auto; 
     }
     .maps {
         display: flex;
@@ -186,9 +186,9 @@ button:hover{
         align-items: center;
     }
     .maps img {
-        max-width: 100%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
-        object-fit: cover; /* Maintain aspect ratio and cover container */
+        max-width: 100%; 
+        height: auto; 
+        object-fit: cover; 
     }
 }
 @media screen and (min-width: 280px) and (max-width: 309px) {
@@ -199,8 +199,8 @@ button:hover{
         font-size: 60px;
     }
     .partneri img {
-        max-width: 50%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
+        max-width: 50%; 
+        height: auto; 
     }
     .maps {
         display: flex;
@@ -208,8 +208,8 @@ button:hover{
         align-items: center;
     }
     .maps img {
-        max-width: 100%; /* Adjust to your preference */
-        height: auto; /* Maintain aspect ratio */
-        object-fit: cover; /* Maintain aspect ratio and cover container */
+        max-width: 100%;
+        height: auto; 
+        object-fit: cover; 
     }
 }
