--- a/project/about.css
+++ b/project/about.css
@@ -186,6 +186,78 @@ button:hover{
     text-align: center;
 }
 
+#togglebutton {
+    position: relative;
+    display: block;
+    width: 100px;
+    height: 50px;
+    border-radius: 160px;
+    background: white;
+    transition: 0.2s;
+    margin-top: 5px;
+    box-shadow: inset 0 8px 60px rgba(0, 0, 0, 0.5),
+                inset 0 8px 8px rgba(0, 0, 0, 0.5),
+                inset 0 -4px 4px rgba(0, 0, 0, 0.5);
+}
+
+#togglebutton .indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 20px;
+    background: linear-gradient(to bottom, #444, #222);
+    border-radius: 50%;
+    transform: scale(0.9);
+    transition: 0.5s;
+}
+
+#togglebutton.active {
+    background: black;
+}
+
+#togglebutton.active .indicator {
+    left: 50px;
+}
+body.dark-theme {
+    background-color: #191919;
+    color: white;
+}
+body.dark-theme .lista ul a:hover,
+body.dark-theme .gumbic:hover,
+body.dark-theme .ourclients,
+body.dark-theme .service,
+body.dark-theme .projects,
+body.dark-theme .clients {
+    color: #4a90e2;  
+}
+body.dark-theme .header,
+body.dark-theme .sektor6{
+    background-color: #363535; 
+    color: #ccc;  
+}
+body.dark-theme .sektor7 {
+    background-color: #222222; 
+    color: #ccc;  
+}
+body.dark-theme .naslov,
+body.dark-theme .contact,
+body.dark-theme .inputs p {
+    color: #aaa; 
+}
+
+body.dark-theme .gallery-control {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+body.dark-theme #weather-info{
+
+    background-image: linear-gradient(#DAF1F4,#B9E4EF);
+    color: transparent;
+}
+body.dark-theme  #weather{
+    background-image: linear-gradient(#DAF1F4,#B9E4EF);
+    color: transparent;
+}
 @media screen and (min-width: 417px) and (max-width: 830px) {
     .header{
         font-size: 15px;
